--- a/frontend/components/events/events.html
+++ b/frontend/components/events/events.html
@@ -4,10 +4,12 @@
             <div class="card">
                 <br>
                 <ul class="collapsible popout" data-collapsible="accordion">
-                    <li ng-repeat="event in events | orderBy: '-date'">
+                    <li ng-repeat="event in events | orderBy:compareDates">
                         <div class="collapsible-header"><i class="material-icons">add</i>{{event.name}}
                         </div>
                         <div class="collapsible-body "><p>{{event.description}} 
+                        <br><br>                            
+                        Start Date: {{event.start_date}}, End Date: {{event.end_date}}
                         <br><br>                            
                         <a href="#/posters/{{$index}}">See Poster Entries</a></p>
                         </div>
@@ -23,20 +25,33 @@
                             <input id="icon_prefix" type="text" class="validate" ng-model="name">
                             <label for="icon_prefix">Event Name</label>
                         </div> 
+                        
+                        <div class="input-field col s6 offset-s1">
+                            <i class="material-icons prefix"></i>
+                            <input id="start_date" type="text" class="datepicker" ng-model="start_date">
+                            
+                            <label for="start_date">Start Date</label>
+                        </div> 
+                        
+                        <div class="input-field col s6 offset-s1">
+                            <i class="material-icons prefix"></i>
+                            <input id="end_date" type="text" class="datepicker" ng-model="end_date">
+                            <label for="end_date">End Date</label>
+                        </div> 
                     </div>
 
                     <div class="row">
                         <div class="input-field col s10 offset-s1">
                             <i class="material-icons prefix">format_align_left</i>
-
                             <textarea id="textarea1" class="materialize-textarea" ng-model="description"></textarea>
                             <label for="textarea1">Description</label>
                         </div> 
-
+                        
                         <div id="eventSubmit" class="col s2 offset-s5">
                             <button id="eventSubmit" type="submit" class="waves-effect waves-light btn">Submit</button>
                         </div>
                     </div>
+                    
                 </form>                    
                 <br>
             </div>
