Commiting work done so far. Checkpoint.

--- a/frontend/components/events/events.html
+++ b/frontend/components/events/events.html
@@ -11,7 +11,8 @@
                         <br><br>                            
                         Start Date: {{event.start_date}}, End Date: {{event.end_date}}
                         <br><br>                            
-                        <a href="#/posters/{{$index}}">See Poster Entries</a></p>
+                        <a href="#/posters/{{event.event_id}}">See Poster Entries</a>      
+                            </p>
                         </div>
                     </li>
                 </ul>
