--- a/frontend/components/events/events.html
+++ b/frontend/components/events/events.html
@@ -11,7 +11,7 @@
                         <br><br>                            
                         Start Date: {{event.start_date}}, End Date: {{event.end_date}}
                         <br><br>                            
-                        <a href="#/posters/{{event.event_id}}">See Poster Entries</a>      
+                        <a href="#/posters/{{event.event_id}}" class="orange-text">See Poster Entries</a>      
                             </p>
                         </div>
                     </li>
@@ -48,8 +48,8 @@
                             <label for="textarea1">Description</label>
                         </div> 
                         
-                        <div id="eventSubmit" class="col s2 offset-s5">
-                            <button id="eventSubmit" type="submit" class="waves-effect waves-light btn">Submit</button>
+                        <div id="eventSubmit" align="center">
+                            <button id="eventSubmit" type="submit" class="waves-effect waves-light orange btn">Submit</button>
                         </div>
                     </div>
                     
