--- a/frontend/components/home/home.html
+++ b/frontend/components/home/home.html
@@ -8,7 +8,6 @@
         </li>
 
         <li>
-            <br>
             <div class="container">
                 <div class="section">
                     <!-- Icon Section  -->
@@ -93,8 +92,8 @@
                         </div>   
 
                         <div class="row">
-                            <div class="col s8 offset-s5">
-                                <a align="center" class="waves-effect waves-light btn">Login</a>
+                            <div align="center">
+                                <a align="center" class="waves-effect waves-light orange btn">Login</a>
                             </div>
                         </div>   
                     </form>
