--- a/frontend/web app/components/home/home.html
+++ b/frontend/web app/components/home/home.html
@@ -1,3 +1,4 @@
+<!--Slider view-->
 <div class="slider">
     <ul class="slides">
         <li>
@@ -17,7 +18,8 @@
                                 <h2 class="center light-blue-text"><i class="material-icons">camera_enhance</i></h2>
                                 <h5 class="center">Capture Images Of And Vote For Posters</h5>
 
-                                <p class="light">By utilizing state of the art OCR technology. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vestibulum porttitor ex ut venenatis. Cras vel erat ac purus semper aliquet vitae eget ipsum. Vivamus eget arcu nec diam euismod efficitur. Mauris volutpat diam id dolor tincidunt, at ultrices velit auctor. Integer id ex a orci ullamcorper efficitur.</p>
+                                <p class="light">By utilizing state of the art OCR technology, Postr provides a way to vote for posters with just the click of a camera. The poster image that you upload is identified by the its title and author. Then in no time at all, Postr will log in your  
+                                vote to the system. It's that simple.</p>
                             </div>
                         </div>
 
@@ -26,7 +28,8 @@
                                 <h2 class="center light-blue-text"><i class="material-icons">star</i></h2>
                                 <h5 class="center">Determine The Most Popular Poster</h5>
 
-                                <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vestibulum porttitor ex ut venenatis. Cras vel erat ac purus semper aliquet vitae eget ipsum. Vivamus eget arcu nec diam euismod efficitur. Mauris volutpat diam id dolor tincidunt, at ultrices velit auctor. Integer id ex a orci ullamcorper efficitur.</p>
+                                <p class="light">Find out the most appreciated poster at an event. Posters are voteable throughout the scope of the 
+                                event, and you can vote for as many posters as possible. But no double voting is permitted in Postr.</p>
                             </div>
                         </div>
 
@@ -36,7 +39,8 @@
                             <h2 class="center light-blue-text"><i class="material-icons">format_list_numbered</i></h2>
                             <h5 class="center">View The Leaderboard For Live Updates</h5>
 
-                            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vestibulum porttitor ex ut venenatis. Cras vel erat ac purus semper aliquet vitae eget ipsum. Vivamus eget arcu nec diam euismod efficitur. Mauris volutpat diam id dolor tincidunt, at ultrices velit auctor. Integer id ex a orci ullamcorper efficitur. </p>
+                            <p class="light">As you vote for your favourite posters, you can find out how each one is performing. 
+                                Will your favourite posters rise to the top? Will they fall crashing down? Only time will tell. </p>
                             </div>
                         </div>
                     </div>
@@ -59,7 +63,8 @@
                                 <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
                                 <h5 class="center">Easy to work with</h5>
 
-                                <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vestibulum porttitor ex ut venenatis. Cras vel erat ac purus semper aliquet vitae eget ipsum. Vivamus eget arcu nec diam euismod efficitur. Mauris volutpat diam id dolor tincidunt, at ultrices velit auctor. Integer id ex a orci ullamcorper efficitur.</p>
+                                <p class="light">Postr provides a simple, elegant and efficient way to vote for your posters. Join now today
+                                    so that you can set up your own poster voting events.</p>
                             </div>
                         </div>
                     </div>
@@ -69,33 +74,40 @@
     </ul>
 </div>
 
+<!-- Login and register forms -->
 <div class="row">
     <br>
     <div class="col s6 offset-s3">
         <div class="card">
             <div class="card-content">
                 <div class="row">
-                    <form class="col s12">
+                    <form class="col s12" ng-submit="loginToAccount()">
                         <br><br>
                         <div class="row">
                             <div class="input-field col s8 offset-s2">
-                                <input id="username" type="text" class="validate">
+                                <input id="username" type="text" class="validate"  ng-model="postrUser.username">
                                 <label for="username">Username</label>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="input-field col s8 offset-s2">
-                                <input id="password" type="password" class="validate">
+                                <input id="password" type="password" class="validate" ng-model="postrUser.password">
                                 <label for="password">Password</label>
                             </div>
                         </div>   
 
                         <div class="row">
                             <div align="center">
-                                <a align="center" class="waves-effect waves-light orange btn">Login</a>
+                                <button align="center" class="waves-effect waves-light orange btn">Login</button>
                             </div>
-                        </div>   
+                        </div>
+                        
+                        <div class="row">
+                            <div align="center">
+                                <a ng-click="registerAccount()" href="#/register" align="center" class="waves-effect waves-light orange btn">Register</a>
+                            </div>
+                        </div>
                     </form>
                 </div> 
             </div>
